# eav-cms

./: README.md  cursor_transcript.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  yoyo.ini
backend/app/: __init__.py  db.py  main.py
backend/app/routers/: entities.py  entity_types.py  health.py
backend/migrations/: 0001_create_eav_tables.py  0002_seed_data.py  0003_add_relation_type.py  0004_seed_relations.py  0005_tags_as_eav.py  0006_tags_seed.py  0007_dimensions_eav.py  0008_measurement_eav.py  0009_color_eav.py  0010_tag_color_relation.py  0011_entity_type_categories.py  0012_category_enum.py  0013_weight_measurement.py  0014_more_products.py  0015_related_products.py  0016_hex_attribute_type.py  0017_update_hex_attribute.py  0018_file_presentation_column_value.py  0019_row_key_component.py  0020_text_component.py  0021_function_key_enum.py  0022_function_component.py  0023_values_function_key_table.py  0024_function_args.py  0025_file_presentation_column_value_value.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_main.py
frontend/: README.md  package.json
frontend/src/: App.css  App.tsx  api.ts
frontend/src/context/: AdminModeContext.tsx
frontend/src/pages/: EntityTypeView.tsx  EntityView.tsx  Home.tsx
