[project]
name = "eav-cms-backend"
version = "0.1.0"
description = "Backend API for the EAV CMS application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "yoyo-migrations>=9.0.0",
    "psycopg2-binary>=2.9.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
